objects/MH_Invoice_Details__c.object
<CustomObject>
    <description>Invoice details to support WO / WD creation
Proof of Concept 12/23/13</description>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Use Tax</fullName>
                </value>
                <value>
                    <fullName>Destination Credit</fullName>
                </value>
                <value>
                    <fullName>Bond</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
                <value>
                    <fullName>Sublbr - New Construction</fullName>
                </value>
                <value>
                    <fullName>Standard Labor</fullName>
                </value>
                <value>
                    <fullName>Double Time Labor</fullName>
                </value>
                <value>
                    <fullName>Pass Through Tax</fullName>
                </value>
                <value>
                    <fullName>Field Supplies</fullName>
                </value>
                <value>
                    <fullName>Freight - New Construction</fullName>
                </value>
                <value>
                    <fullName>Freight - Service and Remodel</fullName>
                </value>
                <value>
                    <fullName>Parts - New Construction</fullName>
                </value>
                <value>
                    <fullName>Parts - Service and Remodel</fullName>
                </value>
                <value>
                    <fullName>Preventive Maintenance</fullName>
                </value>
                <value>
                    <fullName>Rental - New Construction</fullName>
                </value>
                <value>
                    <fullName>Rental - Service and Remodel</fullName>
                </value>
                <value>
                    <fullName>Sublbr - Service and Remodel</fullName>
                </value>
                <value>
                    <fullName>Pass Through Parts</fullName>
                </value>
                <value>
                    <fullName>Pass Through Labor</fullName>
                </value>
                <value>
                    <fullName>Pass Through Freight</fullName>
                </value>
                <value>
                    <fullName>Pass Through Rentals</fullName>
                </value>
                <value>
                    <fullName>Overtime Labor</fullName>
                </value>
                <value>
                    <fullName>Asset Mgmt Fees</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Add_to_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add to Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Costing_Qty__c</fullName>
        <description>Quantity field to hold the actual quantity coming from the Work Detail line to do proper costing of the line on the invoice/invoice details</description>
        <label>Costing Qty</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Invoiced__c</fullName>
        <label>Date Invoiced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Detail_Line_Cost__c</fullName>
        <label>Detail Line Cost</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hide_Line_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to hide lines on an invoice if desired</description>
        <inlineHelpText>Check this box if the line should be hidden on the Invoice</inlineHelpText>
        <label>Hide Line?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interface_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added this field to support Scribe updating the record after it pulls the data so it does not pull it twice</description>
        <label>Interface Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Status__c</fullName>
        <formula>TEXT(Invoice__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>MH-Invoice</label>
        <referenceTo>MH_Invoice__c</referenceTo>
        <relationshipName>Invoice_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Line_Price_per_Unit__c</fullName>
        <label>Line Price per Unit</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line_Qty__c</fullName>
        <label>Line Qty</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parts</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>Expenses</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Vendor Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Invoice_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <label>Sales Tax</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>Order in which the invoice lines should be presented when the invoice is produced via conga.</description>
        <inlineHelpText>Indicate the order for the lines.</inlineHelpText>
        <label>Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_Line_Price_per_Unit__c</fullName>
        <formula>Text(Line_Price_per_Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T_Line_Price_per_Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Line_Price__c</fullName>
        <description>The detail line-item line price</description>
        <label>Extended Price</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Line_Price_formula__c</fullName>
        <description>Calculates the total price of the line including tax</description>
        <formula>Total_Line_Price__c +  Sales_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Line Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure_idc__c</fullName>
        <description>Update line items with unit of measure</description>
        <label>Unit of Measure</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Invoice_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Description_idc__c</fullName>
        <description>Update invoice detail line with corresponding work detail line on a WO</description>
        <label>Work Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Work_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Work detail related to this invoice detail entry</description>
        <label>Work Detail</label>
        <referenceTo>SVMXC__Service_Order_Line__c</referenceTo>
        <relationshipName>Invoice_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipName>Invoice_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Invoice Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Invoice__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Part__c</columns>
        <columns>Work_Order__c</columns>
        <columns>Work_Detail__c</columns>
        <columns>Vendor__c</columns>
        <columns>Line_Type__c</columns>
        <columns>Line_Qty__c</columns>
        <columns>Activity_Type__c</columns>
        <columns>Line_Price_per_Unit__c</columns>
        <columns>Sales_Tax__c</columns>
        <columns>Total_Line_Price__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Created_Today</fullName>
        <columns>Invoice__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Part__c</columns>
        <columns>Work_Order__c</columns>
        <columns>Work_Detail__c</columns>
        <columns>Vendor__c</columns>
        <columns>Line_Type__c</columns>
        <columns>Line_Qty__c</columns>
        <columns>Activity_Type__c</columns>
        <columns>Line_Price_per_Unit__c</columns>
        <columns>Sales_Tax__c</columns>
        <columns>Total_Line_Price__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Invoice Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Details</pluralLabel>
    <recordTypes>
        <fullName>MH_Master</fullName>
        <active>true</active>
        <label>MH Master</label>
    </recordTypes>
    <recordTypes>
        <fullName>MH_Read_Only</fullName>
        <active>true</active>
        <label>MH Read Only</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Edit_Invoice_Details_Not_Billed</fullName>
        <active>false</active>
        <description>Invoice Details can be edited only when Invoice is Not Billed or Reversed.</description>
        <errorConditionFormula>NOT(ISPICKVAL(Invoice__r.Status__c , &quot;Not Billed&quot;))
&amp;&amp;
NOT(ISPICKVAL(Invoice__r.Status__c, &quot;Reversed&quot;))</errorConditionFormula>
        <errorMessage>Invoice Details cannot be edited after the Invoice has been billed.</errorMessage>
    </validationRules>
</CustomObject>